# gm_microoptimisation_war_crime

./: Cargo.toml  README.md  build.rs  gm_microoptimisation_war_crime.dll.vdf  gm_microoptimisation_war_crime.so.vdf
src/: enums.rs  hax.rs  lib.rs  localization.rs  optimise.rs  realms.rs  strip.rs  tests.rs
src/cxx/: mod.rs  plugin.cpp  plugin.hpp
src/cxx/include/: iluainterface.h  iserverplugin.h
