[package]
name = "gm_microoptimisation_war_crime"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"

[dependencies]
#gmod = "12.0.1"
magic_static = "3.0.1"
pcre2 = "0.2.3"
cxx = "1.0.63"
gmod = { path = "D:\\gmod-rs\\gmod" }
gmserverplugin = { path = "C:\\Users\\William\\Documents\\GitHub\\gmserverplugin\\gmserverplugin" }

[build-dependencies]
cxx-build = "1.0.63"