[package]
name = "gm_microoptimisation_war_crime"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"

[dependencies]
magic_static = "3.0.1"
pcre2 = "0.2.3"
cxx = "1.0.63"
gmod = "14.0.2"
gmserverplugin = "2.0.1"

[build-dependencies]
cxx-build = "1.0.63"
